- Made sidebar selection follow the page loeded.
* src/yelp-window.c:
- Made sidebar selection follow the page loeded.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-16  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Made sidebar selection follow the page loeded.
+
+2003-12-16  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-db-pager.c:
 	* src/yelp-pager.c:
 	* src/yelp-pager.h:
