Updated Belarusian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-17  Ales Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian translation.
+
 2003-12-16  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
