--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-18  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2003-12-17  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation.
