--- a/po/ja.po
+++ b/po/ja.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-09 00:18-0600\n"
-"PO-Revision-Date: 2003-11-02 11:45+0900\n"
-"Last-Translator: KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>\n"
+"POT-Creation-Date: 2003-12-18 00:49+0900\n"
+"PO-Revision-Date: 2003-12-18 00:48+0900\n"
+"Last-Translator: Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,87 +21,76 @@ msgid "Applications"
 msgstr "アプリケーション"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - デスクトップ"
+msgstr "デスクトップ"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "開発"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "開発"
+msgstr "開発環境"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "開発"
+msgstr "開発ツール"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/編集(_E)"
+msgstr "エディタ"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "アプリケーション"
+msgstr "教育向けのアプリケーション"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "ゲームとエンターテイメント"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "全般"
 
-#. GList           *seriesids;
-#: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
+#: data/toc.xml.in.h:10
 msgid "Help Contents"
 msgstr "ヘルプの目次"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "アプリケーション"
+msgstr "インターネットのアプリケーション"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "カーネル関数"
+msgstr "カーネル"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "アプリケーション"
+msgstr "マルチメディアのアプリケーション"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "オフィスとサービス・アプリケーション"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "アプリケーション"
+msgstr "科学向けのアプリケーション"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "セキュリティ"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "ユーティリティ"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "アプリケーション"
+msgstr "X アプリケーション"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -143,31 +132,30 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp ファクトリ"
 
-#: src/yelp-db-pager.c:238 src/yelp-window.c:730 src/yelp-window.c:817
-#: src/yelp-window.c:976
-#, fuzzy, c-format
+#: src/yelp-db-pager.c:238 src/yelp-window.c:715
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "ドキュメント '%s' は存在しません"
+msgstr "ドキュメント '%s' を開けませんでした"
 
-#: src/yelp-db-pager.c:404
+#: src/yelp-db-pager.c:410
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "yelp:document に HREF 属性がありませんでした"
 
-#: src/yelp-db-pager.c:419
+#: src/yelp-db-pager.c:425
 msgid "Out of memory"
-msgstr ""
+msgstr "メモリが足りません"
 
-#: src/yelp-db-pager.c:547
+#: src/yelp-db-pager.c:584
 msgid "Titlepage"
-msgstr ""
+msgstr "タイトルページ"
 
-#: src/yelp-db-pager.c:549
+#: src/yelp-db-pager.c:586
 msgid "Contents"
 msgstr "目次"
 
-#: src/yelp-db-pager.c:567
+#: src/yelp-db-pager.c:604
 msgid "Unknown"
-msgstr ""
+msgstr "不明"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -243,191 +231,154 @@ msgstr "概要"
 msgid "System Administration"
 msgstr "システム管理 (#8)"
 
-#: src/yelp-pager.c:117
-#, fuzzy
-msgid "Document URI"
-msgstr "ドキュメント"
-
 #: src/yelp-pager.c:118
+msgid "Document URI"
+msgstr "ドキュメントの URI"
+
+#: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "処理するドキュメントの URI"
 
 #: src/yelp-toc-pager.c:229
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: 一時停止のカウントが負です。"
 
-#: src/yelp-toc-pager.c:567 src/yelp-toc-pager.c:579
-#, fuzzy
+#: src/yelp-toc-pager.c:570 src/yelp-toc-pager.c:582
 msgid "The table of contents could not be read."
-msgstr "ドキュメント '%s' は存在しません"
+msgstr "目次を読み込めませんでした。"
 
-#: src/yelp-toc-pager.c:780 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
-#: src/yelp-view-toc.c:741
+#: src/yelp-toc-pager.c:784
 msgid "Categories"
 msgstr "カテゴリ"
 
-#: src/yelp-toc-pager.c:801 src/yelp-view-toc.c:366 src/yelp-view-toc.c:549
-#: src/yelp-view-toc.c:740
+#: src/yelp-toc-pager.c:805
 msgid "Documents"
 msgstr "ドキュメント"
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:766
-#: src/yelp-window.c:899
-msgid "Loading..."
-msgstr "読み込み中..."
-
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517 src/yelp-window.c:452
-msgid "Section"
-msgstr "セクション"
-
-#: src/yelp-view-index.c:480
-msgid "_Search for:"
-msgstr "検索する文字列(_S):"
-
-#: src/yelp-view-toc.c:166
-msgid "GNOME - Desktop"
-msgstr "GNOME - デスクトップ"
-
-#: src/yelp-view-toc.c:167
-msgid "Additional documents"
-msgstr "追加ドキュメント"
-
-#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
-msgid "Manual Pages"
-msgstr "マニュアル・ページ"
-
-#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
-msgid "Info Pages"
-msgstr "Info ページ"
-
-#: src/yelp-view-toc.c:447
-msgid "Manual pages"
-msgstr "マニュアル・ページ"
-
-#: src/yelp-view-toc.c:707
-msgid "GNOME is"
-msgstr "GNOME は"
-
-#: src/yelp-view-toc.c:708
-msgid "Free Software"
-msgstr "フリーソフトウェアです"
-
-#: src/yelp-view-toc.c:709
-msgid "(C)"
-msgstr "(C)"
-
-#: src/yelp-window.c:213
+#: src/yelp-window.c:203
 msgid "/_File"
 msgstr "/ファイル(_F)"
 
-#: src/yelp-window.c:214
+#: src/yelp-window.c:204
 msgid "/File/_New window"
 msgstr "/ファイル(_F)/新規(_N)"
 
-#: src/yelp-window.c:217
+#: src/yelp-window.c:207
 msgid "/File/_Close window"
 msgstr "/ファイル(_F)/閉じる(_C)"
 
-#: src/yelp-window.c:221
+#: src/yelp-window.c:211
 msgid "/_Edit"
 msgstr "/編集(_E)"
 
-#: src/yelp-window.c:222
+#: src/yelp-window.c:212
 msgid "/Edit/_Find in page..."
 msgstr "/編集(_E)/文字列の検索(_F)..."
 
-#: src/yelp-window.c:225
+#: src/yelp-window.c:215
 msgid "/Edit/_Find again"
 msgstr "/編集(_E)/再検索(_F)"
 
-#: src/yelp-window.c:229
+#: src/yelp-window.c:219
 msgid "/_Go"
 msgstr "/ジャンプ(_G)"
 
-#: src/yelp-window.c:230
+#: src/yelp-window.c:220
 msgid "/Go/_Back"
 msgstr "/ジャンプ(_G)/戻る(_B)"
 
-#: src/yelp-window.c:233
+#: src/yelp-window.c:223
 msgid "/Go/_Forward"
 msgstr "/ジャンプ(_G)/進む(_F)"
 
-#: src/yelp-window.c:236
+#: src/yelp-window.c:226
 msgid "/Go/_Home"
 msgstr "/ジャンプ(_G)/ホーム(_H)"
 
-#.
-#. {N_("/Go/_Index"),               NULL,
-#. window_go_index_cb,             0,
-#. "<StockItem>",                  GTK_STOCK_INDEX            },
-#.
-#: src/yelp-window.c:245
+#: src/yelp-window.c:229
+msgid "/Go/"
+msgstr "/ジャンプ/"
+
+#: src/yelp-window.c:230
+msgid "/Go/_Previous"
+msgstr "/ジャンプ/前へ(_P)"
+
+#: src/yelp-window.c:233
+msgid "/Go/_Next"
+msgstr "/ジャンプ/次へ(_N)"
+
+#: src/yelp-window.c:236
+msgid "/Go/_Contents"
+msgstr "/ジャンプ/目次(_C)"
+
+#: src/yelp-window.c:240
 msgid "/_Help"
 msgstr "/ヘルプ(_H)"
 
-#: src/yelp-window.c:246
+#: src/yelp-window.c:241
 msgid "/Help/_About"
 msgstr "/ヘルプ(_H)/情報(_A)"
 
-#: src/yelp-window.c:308
+#: src/yelp-window.c:303
 msgid "Help Browser"
 msgstr "ヘルプ・ブラウザ"
 
-#: src/yelp-window.c:505
-msgid "Back"
-msgstr "戻る"
-
-#: src/yelp-window.c:506
-msgid "Show previous page in history"
-msgstr "履歴の中の前のページを表示します"
-
-#: src/yelp-window.c:516
-msgid "Forward"
-msgstr "進む"
-
-#: src/yelp-window.c:517
-msgid "Show next page in history"
-msgstr "履歴の中の次のページを表示します"
-
-#: src/yelp-window.c:529
-msgid "Home"
-msgstr "ホーム"
-
-#: src/yelp-window.c:530
-msgid "Go to home view"
-msgstr "ホームビューにジャンプします"
-
-#: src/yelp-window.c:635
+#: src/yelp-window.c:363
 #, c-format
 msgid "The document '%s' does not exist"
 msgstr "ドキュメント '%s' は存在しません"
 
-#: src/yelp-window.c:655
+#: src/yelp-window.c:383
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML ドキュメントはサポートしなくなりました。"
 
-#: src/yelp-window.c:887
-msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+#: src/yelp-window.c:500
+msgid "Section"
+msgstr "セクション"
 
-#: src/yelp-window.c:891
-msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+#: src/yelp-window.c:553
+msgid "Back"
+msgstr "戻る"
 
-#: src/yelp-window.c:895
-#, fuzzy
-msgid "Loading..&nbsp;"
+#: src/yelp-window.c:554
+msgid "Show previous page in history"
+msgstr "履歴の中の前のページを表示します"
+
+#: src/yelp-window.c:564
+msgid "Forward"
+msgstr "進む"
+
+#: src/yelp-window.c:565
+msgid "Show next page in history"
+msgstr "履歴の中の次のページを表示します"
+
+#: src/yelp-window.c:577
+msgid "Home"
+msgstr "ホーム"
+
+#: src/yelp-window.c:578
+msgid "Go to home view"
+msgstr "ホームビューにジャンプします"
+
+#: src/yelp-window.c:748 src/yelp-window.c:779 src/yelp-window.c:991
+#: src/yelp-window.c:1053
+#, c-format
+msgid "The page '%s' could not be found in this document."
+msgstr "ページ '%s' がこのドキュメントにはありません。"
+
+#: src/yelp-window.c:804
+msgid "Loading..."
 msgstr "読み込み中..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1057
+#: src/yelp-window.c:1134
 msgid "translator_credits"
 msgstr ""
 "Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>"
 
-#: src/yelp-window.c:1062
+#: src/yelp-window.c:1139
 msgid "A Help Browser for GNOME"
 msgstr "GNOME 向けのヘルプ・ブラウザ"
 
@@ -438,21 +389,3 @@ msgstr "GNOME 向けのヘルプ・ブラウザです"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "GNOME ヘルプ・システム"
-
-#~ msgid "About This Document"
-#~ msgstr "このドキュメントについて"
-
-#~ msgid "Previous"
-#~ msgstr "前へ"
-
-#~ msgid "Next"
-#~ msgstr "次へ"
-
-#~ msgid "/Go/_Index"
-#~ msgstr "/ジャンプ(_G)/目次(_I)"
-
-#~ msgid "Index"
-#~ msgstr "目次"
-
-#~ msgid "Search in the index"
-#~ msgstr "目次の中から検索します"
