- Crash fix from Chee Bin HOH.
* src/yelp-db-pager.c:
- Crash fix from Chee Bin HOH.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-18  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-db-pager.c:
+	- Crash fix from Chee Bin HOH.
+
+2003-12-18  Shaun McCance  <shaunm@gnome.org>
+
 	All from Chee Bin HOH:
 
 	* data/ui/yelp.glade:
