Updated German translation / POTFILES.in.

--- a/po/de.po
+++ b/po/de.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Yelp 2.4.x\n"
+"Project-Id-Version: Yelp 2.5.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-09 00:18-0600\n"
-"PO-Revision-Date: 2003-06-17 10:58+0200\n"
+"POT-Creation-Date: 2003-12-19 16:46+0100\n"
+"PO-Revision-Date: 2003-12-19 16:46+0100\n"
 "Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,119 +20,104 @@ msgid "Applications"
 msgstr "Anwendungen"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "Desktop"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Entwicklung"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Entwicklung"
+msgstr "Entwicklungsumgebungen"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Entwicklung"
+msgstr "Entwicklungswerkzeuge"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/_Bearbeiten"
+msgstr "Editoren"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Anwendungen"
+msgstr "Erziehungsanwendungen"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Spiele und Unterhaltung"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "Allgemein"
 
-#. GList           *seriesids;
-#: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
+#: data/toc.xml.in.h:10
 msgid "Help Contents"
 msgstr "Hilfe-Inhalt"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Anwendungen"
+msgstr "Internet-Anwendungen"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Kernelroutinen"
+msgstr "Kernel"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Anwendungen"
+msgstr "Multimedia-Anwendungen"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Büro- und Produktivanwendungen"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Anwendungen"
+msgstr "Wissenschaftliche Anwendungen"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Sicherheit"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Werkzeuge"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "Anwendungen"
+msgstr "X-Anwendungen"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
 msgstr "*"
 
 #: data/ui/yelp.glade.h:2
-msgid "<b>Find text in the document:</b>"
-msgstr "<b>Im Dokument nach Text suchen:</b>"
-
-#: data/ui/yelp.glade.h:3
-msgid "Automatically _wrap around"
-msgstr "Automatischer _Zeilenumbruch"
-
-#: data/ui/yelp.glade.h:4
-msgid "Find text..."
-msgstr "Nach Text suchen..."
-
-#: data/ui/yelp.glade.h:5
-msgid "Match _entire word"
-msgstr "Nur _vollständige Wörter berücksichtigen"
-
-#: data/ui/yelp.glade.h:6
-msgid "_Match upper/lower case"
+msgid "C_ase sensitive"
 msgstr "Groß-/Kleinschreibung _berücksichtigen"
 
-#: data/ui/yelp.glade.h:7
+#: data/ui/yelp.glade.h:3
+msgid "Find"
+msgstr "Suchen"
+
+#: data/ui/yelp.glade.h:4
+msgid "_Find: "
+msgstr "_Suchen:"
+
+#: data/ui/yelp.glade.h:5
 msgid "_Next"
 msgstr "_Weitersuchen"
 
-#: data/ui/yelp.glade.h:8
+#: data/ui/yelp.glade.h:6
 msgid "_Previous"
 msgstr "_Rückwärts suchen"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Wrap around"
+msgstr "_Zeilenumbruch"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -142,32 +127,30 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-Fabrik"
 
-#: src/yelp-db-pager.c:238 src/yelp-window.c:730 src/yelp-window.c:817
-#: src/yelp-window.c:976
-#, fuzzy, c-format
+#: src/yelp-db-pager.c:238 src/yelp-window.c:735
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "Das Dokument »%s« existiert nicht"
+msgstr "Das Dokument »%s« konnte nicht geöffnet werden"
 
-#: src/yelp-db-pager.c:404
+#: src/yelp-db-pager.c:410
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Kein href-Attribut im yelp:-Dokument gefunden"
 
-#: src/yelp-db-pager.c:419
+#: src/yelp-db-pager.c:425
 msgid "Out of memory"
-msgstr ""
+msgstr "Speichermangel"
 
-#: src/yelp-db-pager.c:547
+#: src/yelp-db-pager.c:584
 msgid "Titlepage"
-msgstr ""
+msgstr "Titelseite"
 
-#: src/yelp-db-pager.c:549
-#, fuzzy
+#: src/yelp-db-pager.c:586
 msgid "Contents"
-msgstr "Hilfe-Inhalt"
+msgstr "Inhalt"
 
-#: src/yelp-db-pager.c:567
+#: src/yelp-db-pager.c:604
 msgid "Unknown"
-msgstr ""
+msgstr "Unbekannt"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -242,194 +225,161 @@ msgstr "Übersichten"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "System-Administration"
-
-#: src/yelp-pager.c:117
-#, fuzzy
-msgid "Document URI"
-msgstr "Dokumente"
+msgstr "Systemadministration"
 
 #: src/yelp-pager.c:118
+msgid "Document URI"
+msgstr "Dokumentenadresse"
+
+#: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "Die Adresse des zu verarbeitenden Dokuments"
 
 #: src/yelp-toc-pager.c:229
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Pausen-Zähler ist negativ"
 
-#: src/yelp-toc-pager.c:567 src/yelp-toc-pager.c:579
-#, fuzzy
+#: src/yelp-toc-pager.c:570 src/yelp-toc-pager.c:582
 msgid "The table of contents could not be read."
-msgstr "Das Dokument »%s« existiert nicht"
+msgstr "Das Inhaltsverzeichnis konnte nicht gelesen werden."
 
-#: src/yelp-toc-pager.c:780 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
-#: src/yelp-view-toc.c:741
+#: src/yelp-toc-pager.c:784
 msgid "Categories"
 msgstr "Kategorien"
 
-#: src/yelp-toc-pager.c:801 src/yelp-view-toc.c:366 src/yelp-view-toc.c:549
-#: src/yelp-view-toc.c:740
+#: src/yelp-toc-pager.c:805
 msgid "Documents"
 msgstr "Dokumente"
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:766
-#: src/yelp-window.c:899
-msgid "Loading..."
-msgstr "Ladevorgang..."
-
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517 src/yelp-window.c:452
-msgid "Section"
-msgstr "Abschnitt"
-
-#: src/yelp-view-index.c:480
-msgid "_Search for:"
-msgstr "_Suchbegriff:"
-
-#: src/yelp-view-toc.c:166
-msgid "GNOME - Desktop"
-msgstr "GNOME - Desktop"
-
-#: src/yelp-view-toc.c:167
-msgid "Additional documents"
-msgstr "Zusätzliche Dokumente"
-
-#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
-msgid "Manual Pages"
-msgstr "Handbuchseiten"
-
-#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
-msgid "Info Pages"
-msgstr "Info-Seiten"
-
-#: src/yelp-view-toc.c:447
-msgid "Manual pages"
-msgstr "Handbuchseiten"
-
-#: src/yelp-view-toc.c:707
-msgid "GNOME is"
-msgstr "GNOME ist"
-
-#: src/yelp-view-toc.c:708
-msgid "Free Software"
-msgstr "Freie Software"
-
-#: src/yelp-view-toc.c:709
-msgid "(C)"
-msgstr "(C)"
-
-#: src/yelp-window.c:213
+#: src/yelp-window.c:220
 msgid "/_File"
 msgstr "/_Datei"
 
-#: src/yelp-window.c:214
+#: src/yelp-window.c:221
 msgid "/File/_New window"
 msgstr "/Datei/_Neues Fenster"
 
-#: src/yelp-window.c:217
+#: src/yelp-window.c:224
 msgid "/File/_Close window"
 msgstr "/Datei/Fenster s_chließen"
 
-#: src/yelp-window.c:221
+#: src/yelp-window.c:228
 msgid "/_Edit"
 msgstr "/_Bearbeiten"
 
-#: src/yelp-window.c:222
-msgid "/Edit/_Find in page..."
-msgstr "/Bearbeiten/In Seite _suchen..."
+#: src/yelp-window.c:229
+msgid "/Edit/_Find..."
+msgstr "/Bearbeiten/_Suchen..."
 
-#: src/yelp-window.c:225
-msgid "/Edit/_Find again"
+#: src/yelp-window.c:232
+msgid "/Edit/Find Ne_xt"
 msgstr "/Bearbeiten/_Weitersuchen"
 
-#: src/yelp-window.c:229
+#: src/yelp-window.c:235
+msgid "/Edit/Find Pre_vious"
+msgstr "/Bearbeiten/_Rückwärts suchen"
+
+#: src/yelp-window.c:239
 msgid "/_Go"
 msgstr "/_Gehe zu"
 
-#: src/yelp-window.c:230
+#: src/yelp-window.c:240
 msgid "/Go/_Back"
 msgstr "/Gehe zu/_Zurück"
 
-#: src/yelp-window.c:233
+#: src/yelp-window.c:243
 msgid "/Go/_Forward"
-msgstr "/Gehe zu/_Vorwärts"
+msgstr "/Gehe zu/_Vor"
 
-#: src/yelp-window.c:236
+#: src/yelp-window.c:246
 msgid "/Go/_Home"
-msgstr "/Gehe zu/_Heim"
+msgstr "/Gehe zu/_Inhalt"
 
-#.
-#. {N_("/Go/_Index"),               NULL,
-#. window_go_index_cb,             0,
-#. "<StockItem>",                  GTK_STOCK_INDEX            },
-#.
-#: src/yelp-window.c:245
+#: src/yelp-window.c:249
+msgid "/Go/"
+msgstr "/Gehe zu/"
+
+#: src/yelp-window.c:250
+msgid "/Go/_Previous"
+msgstr "/Gehe zu/_Zurück"
+
+#: src/yelp-window.c:253
+msgid "/Go/_Next"
+msgstr "/Gehe zu/_Vor"
+
+#: src/yelp-window.c:256
+msgid "/Go/_Contents"
+msgstr "/Gehe zu/_Inhalt"
+
+#: src/yelp-window.c:260
 msgid "/_Help"
 msgstr "/_Hilfe"
 
-#: src/yelp-window.c:246
+#: src/yelp-window.c:261
 msgid "/Help/_About"
 msgstr "/Hilfe/_Info"
 
-#: src/yelp-window.c:308
+#: src/yelp-window.c:323
 msgid "Help Browser"
 msgstr "Hilfe-Browser"
 
-#: src/yelp-window.c:505
-msgid "Back"
-msgstr "Zurück"
-
-#: src/yelp-window.c:506
-msgid "Show previous page in history"
-msgstr "Die vorherige Seite in der Chronik anzeigen"
-
-#: src/yelp-window.c:516
-msgid "Forward"
-msgstr "Vor"
-
-#: src/yelp-window.c:517
-msgid "Show next page in history"
-msgstr "Die nächste Seite in der Chronik anzeigen"
-
-#: src/yelp-window.c:529
-msgid "Home"
-msgstr "Heim"
-
-#: src/yelp-window.c:530
-msgid "Go to home view"
-msgstr "Zur Heimansicht gehen"
-
-#: src/yelp-window.c:635
+#: src/yelp-window.c:383
 #, c-format
 msgid "The document '%s' does not exist"
 msgstr "Das Dokument »%s« existiert nicht"
 
-#: src/yelp-window.c:655
+#: src/yelp-window.c:403
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook-SGML-Dokumente werden nicht mehr unterstützt"
 
-#: src/yelp-window.c:887
-msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+#: src/yelp-window.c:522
+msgid "Section"
+msgstr "Abschnitt"
 
-#: src/yelp-window.c:891
-msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+#: src/yelp-window.c:575
+msgid "Back"
+msgstr "Zurück"
 
-#: src/yelp-window.c:895
-#, fuzzy
-msgid "Loading..&nbsp;"
+#: src/yelp-window.c:576
+msgid "Show previous page in history"
+msgstr "Die vorherige Seite in der Chronik anzeigen"
+
+#: src/yelp-window.c:586
+msgid "Forward"
+msgstr "Vor"
+
+#: src/yelp-window.c:587
+msgid "Show next page in history"
+msgstr "Die nächste Seite in der Chronik anzeigen"
+
+#: src/yelp-window.c:599
+msgid "Home"
+msgstr "Inhalt"
+
+#: src/yelp-window.c:600
+msgid "Go to home view"
+msgstr "Zur Inhaltsansicht gehen"
+
+#: src/yelp-window.c:768 src/yelp-window.c:799 src/yelp-window.c:1013
+#: src/yelp-window.c:1075
+#, c-format
+msgid "The page '%s' could not be found in this document."
+msgstr "Die Seite »%s« konnte in diesem Dokument nicht gefunden werden."
+
+#: src/yelp-window.c:824
+msgid "Loading..."
 msgstr "Ladevorgang..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1057
+#: src/yelp-window.c:1156
 msgid "translator_credits"
 msgstr ""
 "Christian Meyer <chrisime@gnome.org>\n"
 "Christian Neumair <chris@gnome-de.org>\n"
 "Matthias Warkus <mawarkus@gnome.org>"
 
-#: src/yelp-window.c:1062
+#: src/yelp-window.c:1161
 msgid "A Help Browser for GNOME"
 msgstr "Ein Hilfe-Browser für GNOME"
 
@@ -440,12 +390,3 @@ msgstr "Hilfe zu GNOME holen"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Hilfe"
-
-#~ msgid "/Go/_Index"
-#~ msgstr "/Gehe zu/_Index"
-
-#~ msgid "Index"
-#~ msgstr "Index"
-
-#~ msgid "Search in the index"
-#~ msgstr "Im Index suchen"
