--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-19  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.in: Removed non-existing files.
+	* de.po: Updated German translation.
+
 2003-12-18  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
