--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-20  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-12-19  Christian Neumair  <chris@gnome-de.org>
 
 	* POTFILES.in: Removed non-existing files.
