--- a/po/ar.po
+++ b/po/ar.po
@@ -1,52 +1,50 @@
+# translation of yelp.po to
 # translation of yelp.po to Arabic
 # This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # Sayed Jaffer Al-Mosawi <mosawi@arabeyes.org>, 2002
+# Isam Bayazidi <bayazidi@arabeyes.org>, 2002
+# Arafat Medini <lumina@silverpen.de>, 2003
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-09 00:18-0600\n"
-"PO-Revision-Date: 2002-05-31 19:28-0300\n"
-"Last-Translator: Isam Bayazidi <bayazidi@arabeyes.org>\n"
-"Language-Team: Arabic <support@arabeyes.org>\n"
+"PO-Revision-Date: 2003-12-20 15:12+0100\n"
+"Last-Translator: Arafat Medini <lumina@silverpen.de>\n"
+"Language-Team: Arabic <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
 msgstr "تطبيقات"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "سطح مكتب - جينوم"
+msgstr "المكتب"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "تطوير"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "تطوير"
+msgstr "بيئات التطوير"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "تطوير"
+msgstr "أدوات التطوير"
 
 #: data/toc.xml.in.h:6
 msgid "Editors"
-msgstr ""
+msgstr "محررات"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "تطبيقات"
+msgstr "تطبيقات التعليم"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
@@ -54,7 +52,7 @@ msgstr ""
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "عام"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
@@ -62,32 +60,28 @@ msgid "Help Contents"
 msgstr "محتويات المساعدة"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "تطبيقات"
+msgstr "تطبيقات الانترنت"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "كيدي"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "روتين النواة"
+msgstr "النواة"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "تطبيقات"
+msgstr "تطبيقات الوسائط المتعددة"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
 msgstr ""
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "تطبيقات"
+msgstr "تطبيقات علمية"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
@@ -95,58 +89,57 @@ msgstr ""
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "أدوات"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "تطبيقات"
+msgstr "تطبيقات X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>بحث في المستند التالي:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "_لف آلي"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "بحث النص..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "مطابقة ل_كامل الكلمة"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_ تطابق الحالة العليا/السفلى"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_التالي"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_السابق"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "يلب"
+msgstr "يالب"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "مصنع يلب"
+msgstr "مصنع يالب"
 
 #: src/yelp-db-pager.c:238 src/yelp-window.c:730 src/yelp-window.c:817
 #: src/yelp-window.c:976
-#, fuzzy, c-format
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "المستند '%s' ليس موجود"
+msgstr "لم يمكن فتح المستند '%s'"
 
 #: src/yelp-db-pager.c:404
 msgid "No href attribute found on yelp:document"
@@ -161,13 +154,12 @@ msgid "Titlepage"
 msgstr ""
 
 #: src/yelp-db-pager.c:549
-#, fuzzy
 msgid "Contents"
-msgstr "محتويات المساعدة"
+msgstr "المحتويات"
 
 #: src/yelp-db-pager.c:567
 msgid "Unknown"
-msgstr ""
+msgstr "مجهول"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -176,11 +168,11 @@ msgstr ""
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "لا استطيع تنشيط يلب : '%s'"
+msgstr "لم يمكن تنشيط يالب: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "لا استطيع فتح نافذة جديدة"
+msgstr "لم يمكن فتح نافذة جديدة."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -201,7 +193,7 @@ msgstr "بيرل"
 
 #: src/yelp-man.c:327
 msgid "Qt"
-msgstr "كيو تي"
+msgstr "Qt"
 
 #: src/yelp-man.c:337
 msgid "TIFF"
@@ -225,11 +217,11 @@ msgstr "روتين النواة"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "عتاد"
+msgstr "ادوات اﻻجهزة"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "ملفات تعريف"
+msgstr "ملفّات الإعدادات"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -244,9 +236,8 @@ msgid "System Administration"
 msgstr "مدير النظام"
 
 #: src/yelp-pager.c:117
-#, fuzzy
 msgid "Document URI"
-msgstr "المستندات"
+msgstr "عنوان المستند"
 
 #: src/yelp-pager.c:118
 msgid "The URI of the document to be processed"
@@ -257,9 +248,8 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr ""
 
 #: src/yelp-toc-pager.c:567 src/yelp-toc-pager.c:579
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "المستند '%s' ليس موجود"
+msgstr ""
 
 #: src/yelp-toc-pager.c:780 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
 #: src/yelp-view-toc.c:741
@@ -281,13 +271,12 @@ msgid "Section"
 msgstr "فصل"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "بحث عن:"
+msgstr "_بحث عن:"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr "سطح مكتب - جينوم"
+msgstr "مكتب - جُنوم"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
@@ -306,57 +295,56 @@ msgid "Manual pages"
 msgstr "صفحات الدليل"
 
 #: src/yelp-view-toc.c:707
-#, fuzzy
 msgid "GNOME is"
-msgstr "سطح مكتب - جينوم"
+msgstr "جُنوم هو"
 
 #: src/yelp-view-toc.c:708
 msgid "Free Software"
-msgstr ""
+msgstr "برنامج حر"
 
 #: src/yelp-view-toc.c:709
 msgid "(C)"
-msgstr ""
+msgstr "جميع الحقوق محفوظة (C)"
 
 #: src/yelp-window.c:213
 msgid "/_File"
-msgstr "/ملف"
+msgstr "/م_لف"
 
 #: src/yelp-window.c:214
 msgid "/File/_New window"
-msgstr "/ملف/نافذة جديدة"
+msgstr "/ملف/نافذة جد_يدة"
 
 #: src/yelp-window.c:217
 msgid "/File/_Close window"
-msgstr "/ملف/اغلق النافذة"
+msgstr "/ملف/_غلق النافذة"
 
 #: src/yelp-window.c:221
 msgid "/_Edit"
-msgstr ""
+msgstr "/_تحرير"
 
 #: src/yelp-window.c:222
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/تحرير/_بحث في الصفحة..."
 
 #: src/yelp-window.c:225
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/تحرير/_بحث مرة أخرى..."
 
 #: src/yelp-window.c:229
 msgid "/_Go"
-msgstr "/انطلق"
+msgstr "/اذ_هب"
 
 #: src/yelp-window.c:230
 msgid "/Go/_Back"
-msgstr "/انطلق/خلف"
+msgstr "/اذهب/_خلف"
 
 #: src/yelp-window.c:233
 msgid "/Go/_Forward"
-msgstr "/انطلق/تقديم"
+msgstr "/اذهب/تق_دّم"
 
 #: src/yelp-window.c:236
 msgid "/Go/_Home"
-msgstr "/انطلق/منزل"
+msgstr "/اذهب/_منزل"
 
 #.
 #. {N_("/Go/_Index"),               NULL,
@@ -365,11 +353,11 @@ msgstr "/انطلق/منزل"
 #.
 #: src/yelp-window.c:245
 msgid "/_Help"
-msgstr "/مساعدة"
+msgstr "/_مساعدة"
 
 #: src/yelp-window.c:246
 msgid "/Help/_About"
-msgstr "/مساعدة/عن"
+msgstr "/مساعدة/_حول"
 
 #: src/yelp-window.c:308
 msgid "Help Browser"
@@ -381,7 +369,7 @@ msgstr "خلف"
 
 #: src/yelp-window.c:506
 msgid "Show previous page in history"
-msgstr "اظهر الصغحة السابقة في التاريخ"
+msgstr "اظهر الصفحة السابقة في التاريخ"
 
 #: src/yelp-window.c:516
 msgid "Forward"
@@ -393,16 +381,16 @@ msgstr "اظهر الصفحة التالية في التاريخ"
 
 #: src/yelp-window.c:529
 msgid "Home"
-msgstr "منزل"
+msgstr "الدليل المنزلي"
 
 #: src/yelp-window.c:530
 msgid "Go to home view"
-msgstr "انتقل الى عرض المنزل"
+msgstr ""
 
 #: src/yelp-window.c:635
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "المستند '%s' ليس موجود"
+msgstr "المستند '%s' غير موجود"
 
 #: src/yelp-window.c:655
 msgid "DocBook SGML documents are no longer supported."
@@ -410,38 +398,43 @@ msgstr ""
 
 #: src/yelp-window.c:887
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "جاري التحميل&nbsp;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:891
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "جاري التحميل.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:895
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "جاري التحميل..."
+msgstr "جاري التحميل...&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1057
 msgid "translator_credits"
-msgstr "تكريم للمترجمين"
+msgstr "تحت إشراف عرب آيز (http://www.arabeyes.org):"
+""
+"عرفات المديني، تونس <lumina@silverpen.de>"
+"محمد جمال، مصر "
+"محمد عصر، مصر "
+"سيد جعفر الموسوي، البحرين، "
+"عصام بيازيدي، الأردن "
+"نور الدين أمين آغة، العربية السعودية "
 
 #: src/yelp-window.c:1062
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "متصفح المساعدة لـ جينوم 2.0"
+msgstr "متصفح مساعدة لجنوم"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "احصل على المساعدة مع جينوم"
+msgstr "احصل على مساعدة مع جُنوم"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "مساعدة"
 
 #~ msgid "/Go/_Index"
-#~ msgstr "/انطلق/فهرس"
+#~ msgstr "/اذهب/_فهرس"
 
 #~ msgid "Index"
 #~ msgstr "فهرس"
