--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-20   Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation updated by Tino Meinen.
+
 2003-12-20  Arafat Medini <lumina@silverpen.de>
                                                                                 
         * ar.po: Updated Arabic translation
