--- a/po/pl.po
+++ b/po/pl.po
@@ -1,7 +1,7 @@
 # Copyright (C) 2002-2003 Free Software Foundation, Inc.
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Aktualną wersję tego pliku możesz odnaleźć w repozytorium cvs.gnome.pl
-# (:pserver:anonymous@cvs.gnome.pl:/home/cvs, puste hasło)
+# (:pserver:anonymous@cvs.gnome.pl:/gnomepl, puste hasło)
 # Jeśli masz jakiekolwiek uwagi odnoszące się do tłumaczenia lub chcesz
 # pomóc w jego rozwijaniu i pielęgnowaniu, napisz do nas na adres:
 # translators@gnome.pl
@@ -9,55 +9,50 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-09 00:18-0600\n"
 "PO-Revision-Date: 2003-01-02 02:27+0100\n"
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Aplikacje"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - środowisko"
+msgstr "Pulpit"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Programowanie"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Programowanie"
+msgstr "Środowiska programistyczne"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Programowanie"
+msgstr "Narzędzia programistyczne"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/_Edycja"
+msgstr "Edytory"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplikacje"
+msgstr "Aplikacje edukacyjne"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Gry i rozrywka"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "Ogólne"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
@@ -65,45 +60,40 @@ msgid "Help Contents"
 msgstr "Zawartość pomocy"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplikacje"
+msgstr "Aplikacje internetowe"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Funkcje jądra"
+msgstr "Jądra"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplikacje"
+msgstr "Aplikacje multimedialne"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Aplikacje biurowe"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplikacje"
+msgstr "Aplikacje naukowe"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Bezpieczeństwo"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Narzędzia"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplikacje"
+msgstr "Aplikacje X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -147,21 +137,21 @@ msgstr "Generator Yelpa"
 
 #: src/yelp-db-pager.c:238 src/yelp-window.c:730 src/yelp-window.c:817
 #: src/yelp-window.c:976
-#, fuzzy, c-format
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "Dokument \"%s\" nie istnieje"
+msgstr "Nie można otworzyć dokumentu \"%s\""
 
 #: src/yelp-db-pager.c:404
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Nie znaleziono atrybutu href dla yelp:document"
 
 #: src/yelp-db-pager.c:419
 msgid "Out of memory"
-msgstr ""
+msgstr "Brak pamięci"
 
 #: src/yelp-db-pager.c:547
 msgid "Titlepage"
-msgstr ""
+msgstr "Strona tytułowa"
 
 #: src/yelp-db-pager.c:549
 msgid "Contents"
@@ -169,7 +159,7 @@ msgstr "Zawartość"
 
 #: src/yelp-db-pager.c:567
 msgid "Unknown"
-msgstr ""
+msgstr "Nieznany"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -246,22 +236,20 @@ msgid "System Administration"
 msgstr "Administracja systemem"
 
 #: src/yelp-pager.c:117
-#, fuzzy
 msgid "Document URI"
-msgstr "Dokumenty"
+msgstr "URI dokumentu"
 
 #: src/yelp-pager.c:118
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI dokumentu do przetworzenia"
 
 #: src/yelp-toc-pager.c:229
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: licznik przerw jest ujemny."
 
 #: src/yelp-toc-pager.c:567 src/yelp-toc-pager.c:579
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Dokument \"%s\" nie istnieje"
+msgstr "Nie można odczytać spisu treści."
 
 #: src/yelp-toc-pager.c:780 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
 #: src/yelp-view-toc.c:741
@@ -340,7 +328,7 @@ msgstr "/Edycja/_Znajdź na stronie..."
 
 #: src/yelp-window.c:225
 msgid "/Edit/_Find again"
-msgstr "/Edycja/_Znajdź ponownie"
+msgstr "/Edycja/_Znajdź ponownie..."
 
 #: src/yelp-window.c:229
 msgid "/_Go"
@@ -406,20 +394,19 @@ msgstr "Dokument \"%s\" nie istnieje"
 
 #: src/yelp-window.c:655
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Dokumenty DocBook SGML nie są już obsługiwane."
 
 #: src/yelp-window.c:887
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "Wczytywanie;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:891
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "Wczytywanie.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:895
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "Wczytywanie..."
+msgstr "Wczytywanie..&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
@@ -439,20 +426,20 @@ msgstr "Pomoc GNOME"
 msgid "Help"
 msgstr "Pomoc"
 
-#~ msgid "About This Document"
-#~ msgstr "Informacje o dokumencie"
+msgid "About This Document"
+msgstr "Informacje o dokumencie"
 
-#~ msgid "Previous"
-#~ msgstr "Poprzednia"
+msgid "Previous"
+msgstr "Poprzednia"
 
-#~ msgid "Next"
-#~ msgstr "Następna"
+msgid "Next"
+msgstr "Następna"
 
-#~ msgid "/Go/_Index"
-#~ msgstr "/P_rzejście/_Indeks"
+msgid "/Go/_Index"
+msgstr "/Przejście/_Spis"
 
-#~ msgid "Index"
-#~ msgstr "Indeks"
+msgid "Index"
+msgstr "Indeks"
 
-#~ msgid "Search in the index"
-#~ msgstr "Wyszukuje w indeksie"
+msgid "Search in the index"
+msgstr "Wyszukuje w indeksie"
