--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-20   Arkadiusz Lipiec <arkadiusz.lipiec@gazeta.pl>
+
+	* pl.po: Updated polish translation by GNOME PL Team
+
 2003-12-20   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
