Updated Swedish translation.
2003-12-22  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-22  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2003-12-20   Arkadiusz Lipiec <arkadiusz.lipiec@gazeta.pl>
 
 	* pl.po: Updated polish translation by GNOME PL Team
@@ -14,7 +18,6 @@
 
 	* es.po: Updated Spanish translation.
 
->>>>>>> 1.369
 2003-12-20  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
@@ -1052,7 +1055,6 @@
 
 	* ja.po: Updated Japanese translation.
 
->>>>>>> 1.155
 2002-04-19  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Updated Dutch translation by Ronald Hummelink.
