--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-22  Shaun McCance  <shaunm@gnome.org>
+
+	* yelp-customization.xsl: Removing.
+
 2003-12-15  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-html.xsl:
