- Removing yelp-customization.xsl
* stylesheets/Makefile.am:
- Removing yelp-customization.xsl

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-22  Shaun McCance  <shaunm@gnome.org>
 
+	* Makefile.am:
+	- Removing yelp-customization.xsl
+
+2003-12-22  Shaun McCance  <shaunm@gnome.org>
+
 	* yelp-customization.xsl: Removing.
 
 2003-12-15  Shaun McCance  <shaunm@gnome.org>
