- Add yelp-theme to test_pager_SOURCES
* src/Makefile.am:
- Add yelp-theme to test_pager_SOURCES

* src/yelp-db-pager.c:
* src/yelp-theme.c:
* src/yelp-theme.h:
- Theme the gray color of screen, programlisting, etc.

* src/yelp-window.c:
- Change keybindings up, for fun.

* stylesheets/Makefile.am:
* stylesheets/db2html-formal.xsl:
* stylesheets/db2html-lists.xsl:
- Removing db2html-formal and db2html-lists

* stylesheets/db2html-block.xsl:
- Better implementation of msg stuff.

* stylesheets/db2html-html.xsl:
* stylesheets/db2html-param.xsl:
- Theme the gray color of screen, programlisting, etc.
- Various stylistic improvements in the CSS.

* stylesheets/db2html-inline.xsl:
* stylesheets/db2html-titlepage.xsl:
* stylesheets/gettext.xsl:
- Get rid of em-dashes.  ~sigh~

* stylesheets/db2html-title.xsl:
- Implemented some more titles and subtitles.

* stylesheets/db2html-titlepage.xsl:
- Deboldify Affiliation.  The pages are too bold.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2003-12-24  Shaun McCance  <shaunm@gnome.org>
+
+	* src/Makefile.am:
+	- Add yelp-theme to test_pager_SOURCES
+
+	* src/yelp-db-pager.c:
+	* src/yelp-theme.c:
+	* src/yelp-theme.h:
+	- Theme the gray color of screen, programlisting, etc.
+
+	* src/yelp-window.c:
+	- Change keybindings up, for fun.
+
+	* stylesheets/Makefile.am:
+	* stylesheets/db2html-formal.xsl:
+	* stylesheets/db2html-lists.xsl:
+	- Removing db2html-formal and db2html-lists
+
 2003-12-22  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-toc-pager.c:
